--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,11 @@
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.0"
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
